--- a/.doc/files/html/_cpu2___main_8c.html
+++ b/.doc/files/html/_cpu2___main_8c.html
@@ -70,7 +70,7 @@ $(function() {
 </div><!--header-->
 <div class="contents">
   <h2>Flowchart</h2>
-  <img src="core2.png"/>
+  <img src="core2_flowchart.png"/>
   <br>
 
 <p>Core2 uses i2c to repeately read color values from an apds9960 sensor. After a successful read the color values are transmitted to core0 via shared memory given that the shared memory is currenty not accquired by core0.  
