--- a/.doc/files/html/_cpu1___main_8c.html
+++ b/.doc/files/html/_cpu1___main_8c.html
@@ -69,7 +69,7 @@ $(function() {
 </div><!--header-->
 <div class="contents">
   <h2>Flowchart</h2>
-  <img src="core1.png"/>
+  <img src="core1_flowchart.png"/>
   <br>
 <p>Core1 uses i2c to repeately read color values from an tcs34725 sensor. After a successful read the color values are transmitted to core0 via shared memory given that the shared memory is currenty not accquired by core0.  
 <a href="#details">More...</a></p>
